################################################################################
# Includes
################################################################################

################################################################################
# Sources
################################################################################

set(SOURCES
	input/DevInput.cpp
	input/InputManager.cpp
	InputBackend.cpp
	InputHandlers.cpp
)

################################################################################
# Libraries
################################################################################

add_library(input STATIC ${SOURCES})
