################################################################################
# Includes
################################################################################

################################################################################
# Sources
################################################################################

set(SOURCES
	input/DevInput.cpp
	InputBackend.cpp
	InputHandlers.cpp
)

################################################################################
# Libraries
################################################################################

add_library(input STATIC ${SOURCES})
