################################################################################
# Includes
################################################################################

################################################################################
# Sources
################################################################################

set(SOURCES
	input/DevInput.cpp
	InputBackend.cpp
)

################################################################################
# Libraries
################################################################################

add_library(input STATIC ${SOURCES})
