################################################################################
# Includes
################################################################################

################################################################################
# Sources
################################################################################

set(SOURCES
	Edid.cpp
	ConnectorBase.cpp
	PgDirSharedBuffer.cpp
)

################################################################################
# Targets
################################################################################

add_library(display_common STATIC ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(display_common ${DRM_LIBRARIES})
