################################################################################
# Includes
################################################################################

################################################################################
# Sources
################################################################################

set(SOURCES
	Connector.cpp
	Display.cpp
	Dumb.cpp
	FrameBuffer.cpp
	Modes.cpp
)

################################################################################
# Targets
################################################################################

add_library(display_drm STATIC ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(display_drm ${DRM_LIBRARIES})
