################################################################################
# Check packages
################################################################################

include(FindPkgConfig)

pkg_check_modules (UDev REQUIRED libudev)

################################################################################
# Includes
################################################################################

################################################################################
# Sources
################################################################################

set(SOURCES
	Connector.cpp
	Display.cpp
	DrmDeviceDetector.cpp
	Dumb.cpp
	FrameBuffer.cpp
	Modes.cpp
)

################################################################################
# Targets
################################################################################

add_library(display_drm STATIC ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(display_drm ${DRM_LIBRARIES} udev display_common)
